# MentoraBrain

./: .gitignore  README.md  pyproject.toml
AIBrain/: chat.py  ingest.py  main.py  testTTS.py
